Change portfolio container height to be fixed 100% to work on IE.

--- a/assets/css/3-modules/portfolio.sass
+++ b/assets/css/3-modules/portfolio.sass
@@ -1,6 +1,6 @@
 div.portfolio-container
   visibility: hidden
-  min-height: 100%
+  height: 100%
   width: 100%
   display: flex
   flex-direction: column
